[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_antigravity"
version = "0.1.0"
authors = [
  { name="Martin Urban" },
]
description = "A simple hello world project with Antigravity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
hello-antigravity = "hello_antigravity.main:main"
